@@ -4,10 +4,10 @@ where
 -- version number is major.minor.patchlvl; don't change the format of the
 -- `versnum' line as it is `grep'ed for by a Makefile
 --
-idstr      = "$Id: BaseVersion.hs,v 1.35 2002/02/10 13:34:26 chak Exp $"
+idstr      = "$Id: BaseVersion.hs,v 1.36 2002/03/05 12:23:01 chak Exp $"
 name       = "Compiler Toolkit"
-versnum    = "0.23.0"
-date	   = "10 Feb 2002"
+versnum    = "0.23.1"
+date	   = "05 Mar 2002"
 version    = name ++ ", version " ++ versnum ++ ", " ++ date
 copyright  = "Copyright (c) [1995..2002] Manuel M T Chakravarty"
 disclaimer = "This software is distributed under the \
